--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,8 +11,10 @@
 </noscript>
 
 <div id="username-page">
-  <div class="username-page-container">
-    <h1 class="title">Type your username to enter the Chatroom</h1>
+  <a href="http://localhost:3000">
+    <button type="submit" class="exit-button">Back</button>
+  </a>  <div class="username-page-container">
+    <h1 class="title">Type your username</h1>
     <form id="usernameForm" name="usernameForm">
       <div class="form-group">
         <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
@@ -25,9 +27,12 @@
 </div>
 
 <div id="chat-page" class="hidden">
+  <a href="http://localhost:8080">
+    <button type="submit" class="exit-button">Back</button>
+  </a>
   <div class="chat-container">
     <div class="chat-header">
-      <h2>Spring WebSocket Chat Demo - By Alibou</h2>
+      <h2>Chat</h2>
     </div>
     <div class="connecting">
       Connecting...
